fixed cardList hashmap, added GameRunIntegration